--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "nodemailer": "^4.6.8",
+    "path": "^0.12.7"
   }
 }
